started moving some of the unit tests out into the unit folder

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Augur JavaScript API",
   "main": "src/index.js",
   "scripts": {
-    "test": "scripts/runtests.sh --core --create --markets --trading --reporting",
+    "test": "scripts/runtests.sh --core --create --markets --trading --reporting --unit",
+		"test:unit": "mocha test/unit/**",
     "integration-test": "AUGURJS_INTEGRATION_TESTS=true scripts/runtests.sh --core --create --markets --trading --reporting --spec",
     "reporting-sequence": "AUGURJS_INTEGRATION_TESTS=true mocha test/reporting/sequence.js -R spec",
     "lint": "jshint gulpfile.js src/*.js src/modules/*.js scripts/*.js test/*.js",
